this is where I got to before starting over - main issue that I'm running into is that I'm unsure how to get the items within the overarching flexBox to stretch out to fit the entire screen. I referred to exercise 06 from TOP, however I'm 99% sure that I've written out the technique in a similar way...
Going to start over on a fresh slate, I think I'm going to make a couple adjustments to the HTML file to remove the <div class = 'header'> and just have the section-one and section-two classes as direct flex items within the body. I'm not so sure about the CSS yet, will uidate in the next commit message

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 body {
-    height: 100vh;
-    margin: 0;
-    overflow-x: hidden;
+    /* overflow-x: hidden;
     overflow-y: scroll;
-    font-family: Roboto, sans-serif;
+    font-family: Roboto, sans-serif; */
+    display: block;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+  }
+
+.theBigBox {
     display: flex;
     flex-direction: column;
-  }
+    justify-content: space-around;
+}
 
 
 ul {
@@ -24,19 +30,24 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1; 
+   
 }
 
-
+.footer {
+    display: flex;
+    justify-content: center;
+}
 
 .section-one {
     display: flex;  
     justify-content: space-between;
+   
 }
 
 .section-two {
     display: flex;
     justify-content: space-between;
+   
 }
 
 .info, .inspirational, .take-action {
@@ -45,6 +56,7 @@ ul {
     padding-bottom: 50px;
     display: flex;
     flex: 1;
+
 }
 
 /* .inspirational {
